--- a/styles/dark.css
+++ b/styles/dark.css
@@ -1,12 +1,71 @@
-/*
-  Специально для тёмной темы при наличии класса,
-  здесь окажутся стили, которые нужно переопределить принудительно,
-  переключая тему
-*/
 
 :root.theme-dark {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+  --page-background: url(../images/cover-image-dark.png);
+  --bg-color: #000028;
+  --accent-color: #FF0070;
+  --accent-color-rgb: 255, 0, 112;
+  --title-color: #DB00FF;
+  --title-decor-color: #000028;
+  --paragraph-color: #F1B2CE;
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --page-background: url(../images/cover-image-dark.png);
+    --bg-color: #000028;
+    --accent-color: #FF0070;
+    --accent-color-rgb: 255, 0, 112;
+    --title-color: #DB00FF;
+    --title-decor-color: #000028;
+    --paragraph-color: #F1B2CE;
+  }
+
+  .header__theme-menu-button, .sect-title {
+    color: var(--accent-color);
+  }
+
+  .header::before,
+  .header::after,
+  .footer::before,
+  .footer::after,
+  .header__theme-menu-button_active {
+    border-color: var(--accent-color);
+  }
+
+  .header__theme-menu-button:hover:not(.header__theme-menu-button_active) {
+    border-color: rgba(var(--accent-color-rgb), 0.5);
+  }
+
+  .header__theme-menu-button:focus-visible {
+    border-bottom-color: var(--accent-color);
+  }
+
+  .rec-label {
+    display: block;
+  }
+}
+
+.theme-dark .header__theme-menu-button,
+.theme-dark .sect-title  {
+    color: var(--accent-color);
+  }
+  
+.theme-dark .header::before,
+.theme-dark .header::after,
+.theme-dark .footer::before,
+.theme-dark .footer::after,
+.theme-dark .header__theme-menu-button_active {
+  border-color: var(--accent-color);
+}
+
+.theme-dark .header__theme-menu-button:focus-visible {
+  border-bottom-color: var(--accent-color);
+}
+
+.theme-dark .header__theme-menu-button:hover:not(.header__theme-menu-button_active) {
+  border-color: rgba(var(--accent-color-rgb), 0.5);
+}
+
+.theme-dark .rec-label {
+  display: block;
 }
