--- a/styles/light.css
+++ b/styles/light.css
@@ -1,12 +1,69 @@
-/*
-  Специально для светлой темы при наличии класса.
-  Здесь окажутся стили, которые нужно переопределить принудительно,
-  переключая тему
-*/
 
 :root.theme-light {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+  --page-background: url(../images/cover-image-light.png);
+  --accent-color: #FF8DCB;
+  --accent-color-rgb: 53, 52, 48;
+  --title-color: #FFC2E6;
+  --title-decor-color: #353430;
+  --paragraph-color: #353430;
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+    --page-background: url(../images/cover-image-light.png);
+    --accent-color: #FF8DCB;
+    --accent-color-rgb: 53, 52, 48;
+    --title-color: #FFC2E6;
+    --title-decor-color: #353430;
+    --paragraph-color: #353430;
+  }
+
+  .header__theme-menu-button, .sect-title {
+    color: var(--title-decor-color);
+  }
+
+  .header::before,
+  .header::after,
+  .footer::before,
+  .footer::after,
+  .header__theme-menu-button_active {
+    border-color: var(--title-decor-color);
+  }
+
+  .header__theme-menu-button:hover:not(.header__theme-menu-button_active) {
+    border-color: rgba(var(--accent-color-rgb), 0.5);
+  }
+
+  .header__theme-menu-button:focus-visible {
+    border-bottom-color: var(--title-decor-color);
+  }
+
+  .rec-label {
+    display: none;
+  }
+}
+
+.theme-light .header__theme-menu-button, 
+.theme-light .sect-title {
+    color: var(--title-decor-color);
+  }
+
+.theme-light .header::before,
+.theme-light .header::after,
+.theme-light .footer::before,
+.theme-light .footer::after,
+.theme-light .header__theme-menu-button_active {
+  border-color: var(--title-decor-color);
+}
+
+.theme-light .header__theme-menu-button:focus-visible {
+  border-bottom-color: var(--title-decor-color);
+}
+
+.theme-light .header__theme-menu-button:hover:not(.header__theme-menu-button_active) {
+  border-color: rgba(var(--accent-color-rgb), 0.5);
+}
+
+.theme-light .rec-label {
+  display: none;
 }
