--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,4 +1,10 @@
-/*
-  Переменные для вашего проекта
-  и их переопределение под различные устройства
-*/
+:root {
+  --page-background: url(../images/cover-image-dark.png);
+  --bg-color: #000028;
+  --accent-color: #FF0070;
+  --accent-color-rgb: 255, 0, 112;
+  --title-color: #DB00FF;
+  --title-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  --title-decor-color: #000028;
+  --paragraph-color: #F1B2CE;
+}
