--- a/styles/mediumscreen.css
+++ b/styles/mediumscreen.css
@@ -22,6 +22,23 @@
   grid-template-columns: 1fr 1fr 1fr;
  }
 
+ .text-block {
+  grid-column: 2/4;
+ }
+
+ .how-heading-title {
+  grid-column: 2/4;
+  margin-left: 9px;
+ }
+
+ .what-heading {
+  padding-left: 0;
+ }
+
+ .gallery-title {
+  margin-bottom: 20px;
+ }
+
  .why-block, .how-block {
   grid-column: 2/4;
   padding-left: 8px;
