--- a/styles/style.css
+++ b/styles/style.css
@@ -35,6 +35,11 @@
 .title-decor {
   color: var(--title-decor-color);
   background-color: var(--accent-color);
+}
+
+.title-decor-content {
+  color: var(--title-decor-color);
+  background-color: var(--accent-color);
   margin-bottom: 10px;
 }
 
@@ -47,13 +52,13 @@
 
 .header::before, .footer::before {
   bottom: clamp(0.625rem, 2.545vw + 0.029rem, 1.25rem);
-  left: clamp(0.625rem, 0.939vw + 0.405rem, 1.25rem);
+  left: clamp(0.625rem, 2.545vw + 0.029rem, 1.25rem);
   border-width: 0 0 2px 2px;
 }
 
 .header::after, .footer::after {
-  top: clamp(0.625rem, 0.939vw + 0.405rem, 1.25rem);
-  right: clamp(0.625rem, 0.939vw + 0.405rem, 1.25rem);
+  top: clamp(0.625rem, 2.545vw + 0.029rem, 1.25rem);
+  right: clamp(0.625rem, 2.545vw + 0.029rem, 1.25rem);
   border-width: 2px 2px 0 0;
 }
 
@@ -86,15 +91,15 @@
   grid-column: 1;
   align-self: start;
   justify-self: end;
-  margin: clamp(0.625rem, 0.939vw + 0.405rem, 1.25rem) clamp(2.375rem, 0.939vw + 2.155rem, 3rem) 0 0;
+  margin: clamp(0.625rem, 2.545vw + 0.029rem, 1.25rem) clamp(2.375rem, 2.545vw + 1.779rem, 3rem) 0 0;
   line-height: 25px;
 }
 
 .rec-label::after {
   content: "";
   position: absolute;
-  top: clamp(1.125rem, 0.939vw + 0.905rem, 1.75rem);
-  right: clamp(1.188rem, 0.939vw + 0.967rem, 1.813rem);
+  top: clamp(1.125rem, 2.545vw + 0.529rem, 1.75rem);
+  right: clamp(1.188rem, 2.545vw + 0.591rem, 1.813rem);
   inline-size: 9px;
   block-size: 9px;
   border-radius: 50%;
@@ -106,7 +111,7 @@
   grid-row: 1;
   grid-column: 1;
   align-self: center;
-  margin: 20px 10px 0 0;
+  margin: 27px 10px 0 0;
   justify-self: end;
 }
 
@@ -136,7 +141,7 @@
 
 .header__theme-menu-button_active {
   border-color: var(--accent-color);
-  padding: -3px 13px 1.5px 13px;
+  padding: 3px 13px 5px 13px;
   pointer-events: none;
 }
 
@@ -154,8 +159,8 @@
   align-self: start;
   justify-self: end;
   padding: 0 50px 0 0;
-  margin: 40px clamp(0.625rem, 2.545vw + 0.029rem, 1.25rem) 0 10px;
-  white-space: pre-wrap;
+  white-space: pre-line;
+  margin: 40px clamp(0.625rem, 2.545vw + 0.029rem, 1.25rem) 0 0;
 }
 
 .main {
@@ -165,27 +170,30 @@
   gap: 50px;
 }
 
-.section {
+.content-section {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 20px;
+}
+
+.text-blocks {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 20px;
+}
+
+.text-blocks-list {
   display: grid;
   gap: 20px;
 }
 
-.text-block {
+.paragraph-main-content {
+  color: var(--paragraph-color)
+}
+
+.gallery {
   display: grid;
-  gap: 20px;
-}
-
-.main-paragraph {
-  color: var(--paragraph-color);
-}
-
-.what-heading {
-  padding-left: 10px;
-}
-
-.how-heading-title {
-  color: var(--title-decor-color);
-  background-color: var(--accent-color);
+  gap: 10px;
 }
 
 .gallery-div {
