--- a/styles/largescreen.css
+++ b/styles/largescreen.css
@@ -40,4 +40,8 @@
     .text-blocks {
       grid-template-columns: repeat(3, 1fr);
     }
+
+    .text-block {
+      align-self: start;
+    }
   }
