--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,7 @@
 
 .page {
   background-image: var(--page-background);
+  background-color: var(-bg-color);
   background-position: center;
   background-size: cover;
   background-attachment: fixed;
@@ -10,20 +11,20 @@
 
 /* повторяющийся код */
 .font-base {
-  font-family: 'IBM Plex mono', sans-serif;
+  font-family: 'IBM Plex mono', monospace, sans-serif;
   font-size: 18px;
   font-weight: normal;
   line-height: 23.4px;
 }
 
 .font-bold {
-  font-family: 'IBM Plex mono', sans-serif;
+  font-family: 'IBM Plex mono', monospace, sans-serif;
   font-size: 18px;
   font-weight: bold;
   line-height: 23.4px;
 }
 
-.header::before, .header::after, .footer::before, .footer::after {
+.decorated-zone::after, .decorated-zone::before {
   content: "";
   position: absolute;
   inline-size: 25px;
@@ -37,12 +38,6 @@
   background-color: var(--accent-color);
 }
 
-.title-decor-content {
-  color: var(--title-decor-color);
-  background-color: var(--accent-color);
-  margin-bottom: 10px;
-}
-
 .heading {
   color: var(--title-color);
   font-size: var(--title-size);
@@ -50,13 +45,13 @@
   text-shadow: 4px 4px 0 var(--accent-color);
 }
 
-.header::before, .footer::before {
+.decorated-zone::before {
   bottom: clamp(0.625rem, 2.545vw + 0.029rem, 1.25rem);
   left: clamp(0.625rem, 2.545vw + 0.029rem, 1.25rem);
   border-width: 0 0 2px 2px;
 }
 
-.header::after, .footer::after {
+.decorated-zone::after {
   top: clamp(0.625rem, 2.545vw + 0.029rem, 1.25rem);
   right: clamp(0.625rem, 2.545vw + 0.029rem, 1.25rem);
   border-width: 2px 2px 0 0;
@@ -65,6 +60,7 @@
 .link {
   text-shadow: 2px 2px 0 var(--accent-color);
   border: 1px solid transparent;
+  text-decoration: none;
 }
 
 .link:hover {
@@ -73,6 +69,7 @@
 }
 
 .link:focus {
+  outline: none;
   border-color: var(--paragraph-color);
 }
 
@@ -81,6 +78,7 @@
   display: grid;
   grid-template-rows: repeat(3, 1fr);
   grid-template-columns: 1fr;
+  min-block-size: 668px;
   block-size: 100vh;
   position: relative;
 }
@@ -148,7 +146,6 @@
 .header-title {
   grid-column: 1;
   grid-row: 2;
-  min-block-size: 192px;
   padding: clamp(1.063rem, 27.226vw - 5.319rem, 7.75rem) 0 0 10px;
 }
 
@@ -182,6 +179,12 @@
   gap: 20px;
 }
 
+.text-block {
+  display: grid;
+  grid-template-rows: span 2;
+  gap: 10px;
+}
+
 .text-blocks-list {
   display: grid;
   gap: 20px;
@@ -200,6 +203,16 @@
   display: grid;
   grid-template-columns: 1fr;
   gap: 10px;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.image {
+  display: block;
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
 }
 
 .gallery-item {
@@ -208,6 +221,7 @@
 }
 
 .footer {
+  min-block-size: 668px;
   block-size: 100vh;
   position: relative;
   display: flex;
