--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,7 @@
 
 .page {
   background-image: var(--page-background);
+  background-color: var(-bg-color);
   background-position: center;
   background-size: cover;
   background-attachment: fixed;
@@ -23,7 +24,7 @@
   line-height: 23.4px;
 }
 
-.header::before, .header::after, .footer::before, .footer::after {
+.decorated-zone::after, .decorated-zone::before {
   content: "";
   position: absolute;
   inline-size: 25px;
@@ -50,13 +51,13 @@
   text-shadow: 4px 4px 0 var(--accent-color);
 }
 
-.header::before, .footer::before {
+.decorated-zone::before {
   bottom: clamp(0.625rem, 2.545vw + 0.029rem, 1.25rem);
   left: clamp(0.625rem, 2.545vw + 0.029rem, 1.25rem);
   border-width: 0 0 2px 2px;
 }
 
-.header::after, .footer::after {
+.decorated-zone::after {
   top: clamp(0.625rem, 2.545vw + 0.029rem, 1.25rem);
   right: clamp(0.625rem, 2.545vw + 0.029rem, 1.25rem);
   border-width: 2px 2px 0 0;
@@ -81,6 +82,7 @@
   display: grid;
   grid-template-rows: repeat(3, 1fr);
   grid-template-columns: 1fr;
+  min-block-size: 668px;
   block-size: 100vh;
   position: relative;
 }
@@ -148,7 +150,6 @@
 .header-title {
   grid-column: 1;
   grid-row: 2;
-  min-block-size: 192px;
   padding: clamp(1.063rem, 27.226vw - 5.319rem, 7.75rem) 0 0 10px;
 }
 
@@ -200,6 +201,16 @@
   display: grid;
   grid-template-columns: 1fr;
   gap: 10px;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.image {
+  display: block;
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
 }
 
 .gallery-item {
@@ -208,6 +219,7 @@
 }
 
 .footer {
+  min-block-size: 668px;
   block-size: 100vh;
   position: relative;
   display: flex;
