--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,7 @@
 
 .page {
   background-image: var(--page-background);
-  background-color: var(-bg-color);
+  background-color: var(--bg-color);
   background-position: center;
   background-size: cover;
   background-attachment: fixed;
